fixes claim width on mobile

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
      body, a {background: #f5f5f5; color: #083347; font-family: 'Merriweather Sans', sans-serif; font-weight: 300}
         h1 {text-align: center; font-weight: 300; font-family: 'Merriweather', serif; margin: 50px auto 50px; position: relative; font-size: 32px; color: #F55321;}
         //h1:after {content:''; display: block; width:42px; bottom: -30px; height: 4px; background: #F55321; left: 50%; margin-left: -21px; position: absolute}
-        .claim {font-style: italic;  text-align: center; margin: 100px auto; font-size: 18px; max-width: 400px}
+        .claim {width: 90%; max-width: 400px; font-style: italic;  text-align: center; margin: 100px auto; font-size: 18px; }
         .claim .logo {font-family: 'Merriweather', serif; font-style: normal;}
         .logo strong {font-weight: 900; color: #083347}
         .language-switch {position: absolute; top: 10px; right: 20px; font-size: 80%}
